# Kaleido

./: LICENSE  Readme.md
source/: AppBase.cpp  CMakeLists.txt  KaleidoWin.h  main.cpp  pch.h
source/asset/: AssetManager.cpp  PodHandle.h  PodLoaders.cpp
source/asset/loaders/: ImageLoader.h
source/editor/: AssetWindow.cpp  DataStrings.h  Editor.cpp  NodeContextActions.cpp  PropertyEditor.cpp  SceneSave.cpp
source/editor/imgui/: ImguiImpl.cpp  ImguiImpl.h
source/platform/: Window.h
source/platform/windows/: Win32Window.cpp  Win32Window.h
source/renderer/: ObserverRenderer.cpp  ObserverRenderer.h  Renderer.h
source/renderer/renderers/contextual/: D3D11SampleRenderer.cpp  D3D11SampleRenderer.h  TestRenderer.cpp  TestRenderer.h
source/renderer/renderers/contextual/d3d11/: D3D11Graphics.cpp  D3D11Graphics.h  Error.h
source/renderer/renderers/contextual/d3d11/asset/: D3D11Asset.h  D3D11AssetManager.h  D3D11Model.cpp  D3D11Model.h
source/renderer/renderers/contextual/d3d11/bindable/: D3D11Bindable.cpp  D3D11Bindable.h  D3D11ConstantBuffer.h  D3D11IndexBuffer.cpp  D3D11IndexBuffer.h  D3D11InputLayout.cpp  D3D11InputLayout.h  D3D11PixelShader.cpp  D3D11PixelShader.h  D3D11Topology.cpp  D3D11Topology.h  D3D11VertexBuffer.cpp  D3D11VertexBuffer.h  D3D11VertexShader.cpp  D3D11VertexShader.h
source/renderer/renderers/opengl/: GLEditorRenderer.cpp  GLPreviewer.cpp  GLRendererBase.cpp
source/renderer/renderers/opengl/assets/: GLMaterial.cpp  GLModel.cpp  GLShader.cpp  GLTexture.cpp
source/renderer/renderers/opengl/basic/: GLBasicAmbient.cpp  GLBasicDirectionalLight.cpp  GLBasicGeometry.cpp  GLBasicPunctualLight.cpp  GLBasicSpotLight.cpp
source/renderer/renderers/opengl/deferred/: GLDeferredRenderer.cpp
source/renderer/renderers/opengl/forward/: GLForwardRenderer.cpp
source/renderer/renderers/vulkan/: Descriptors.cpp  Descriptors.h  Device.cpp  Device.h  DeviceWrapper.cpp  DeviceWrapper.h  GraphicsPipeline.cpp  GraphicsPipeline.h  InstanceLayer.cpp  InstanceLayer.h  InstanceWrapper.cpp  InstanceWrapper.h  Model.cpp  Model.h  PhysicalDevice.cpp  PhysicalDeviceWrapper.cpp  PhysicalDeviceWrapper.h  Swapchain.cpp  Swapchain.h  Texture.cpp  Texture.h  VkObjectWrapper.h  VkSampleRenderer.cpp  VkSampleRenderer.h
source/system/: Engine.cpp  Engine.h  Input.cpp  Logger.cpp
source/world/: NodeFactory.cpp  World.cpp
source/world/nodes/: Node.cpp  RootNode.cpp
source/world/nodes/camera/: CameraNode.cpp  EditorCameraNode.cpp  WindowCameraNode.cpp
source/world/nodes/light/: AmbientNode.cpp  DirectionalLightNode.cpp  LightNode.cpp  PunctualLightNode.cpp  SpotLightNode.cpp
source/world/nodes/user/: FlyingUserNode.cpp  FreeformUserNode.cpp  UserNode.cpp
(+11 files in other folders)
